--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "version": "1.0.0",
   "minAppVersion": "0.0.1",
   "description": "MindMap for Obsidian Canvas: Tab/Enter/Arrow driven, auto-layout and auto-size.",
-  "author": "tonghejioa",
+  "author": "tonghejiao",
   "isDesktopOnly": false
 }
