--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "canvas-mindmap-keyboard",
   "name": "canvas-mindmap-keyboard",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "minAppVersion": "0.0.1",
-  "description": "MindMap for Obsidian Canvas: Tab/Enter/Arrow driven, auto-layout and auto-size.",
+  "description": "MindMap for Canvas: Tab/Enter/Arrow driven, auto-layout and auto-size.",
   "author": "tonghejiao",
   "isDesktopOnly": false
 }
